--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=SUSE:wght@100..800&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+
 :root {
   --ihc-light-mode-bg: white;
   --ihc-none-mode: rgb(0, 0, 0, 1);
   --ihc-dark-mode-bg: rgb(80, 80, 80);
   --ihc-light-mode-text: black;
   --ihc-dark-mode-text: rgb(116, 143, 147);
-  --ihc-white-mode-text: white;
-  --ihc-white-mode-text: white;
-  --ihc-toolbar-light-mode: green;
+  --ihc-white-mode-text: rgb(181, 179, 179);
+  --ihc-toolbar-light-mode: green; /*#5aff3d*/
   --ihc-toolbar-dark-mode: black;
   --ihc-drawer-light: rgba(0, 0, 0, 0.3);
   --ihc-drawer-dark: rgba(0, 0, 0, 1);
