--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 #root {
   margin: 0;
   padding: 0;
-  text-align: center;
+  /* text-align: center; */
   background-repeat: no-repeat;
   background-size: cover;
 }
