add product forfm changed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,4 +24,5 @@
   --ihc-dark-mode-Chevron: white;
   --ihc-pages-margin-top: 64px;
   --ihc-pages-margin-left: 0.5rem;
+  --ihc-JV-bgColor-yellow: rgb(198, 206, 0, 0.7);
 }
