--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,4 +25,6 @@
   --ihc-pages-margin-top: 64px;
   --ihc-pages-margin-left: 0.5rem;
   --ihc-JV-bgColor-yellow: rgb(198, 206, 0, 0.7);
+  --ihc-JV-orange: orange;
+  --ihc-jV-green: green;
 }
