--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,29 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=SUSE:wght@100..800&display=swap');
-/* * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  text-decoration: none;
-} */
 
 :root {
-  --ihc-light-mode-bg: white;
-  --ihc-none-mode: rgb(0, 0, 0, 1);
   --ihc-dark-mode-bg: rgb(80, 80, 80);
+  --ihc-light-mode-bg-app: rgb(225, 230, 231);
   --ihc-dark-mode-bg-app: rgb(160, 159, 159);
+  --ihc-light-mode-bg-form: rgb(239, 240, 240);
+  --ihc-dark-mode-bg-form: rgb(218, 220, 220);
   --ihc-dark-mode-bg-nav: rgb(119, 145, 148);
   --ihc-light-mode-bg-nav: rgb(225, 230, 231);
   --ihc-light-mode-text: black;
   --ihc-dark-mode-text: rgb(116, 143, 147);
   --ihc-white-mode-text: rgb(181, 179, 179);
+  --ihc-dark-mode-table: rgb(116, 143, 147);
+  --ihc-light-mode-table: white;
   --ihc-toolbar-light-mode: green; /*#5aff3d*/
   --ihc-toolbar-dark-mode: black;
   --ihc-drawer-light: rgba(0, 0, 0, 0.3);
   --ihc-drawer-dark: rgba(0, 0, 0, 1);
-  --ihc-light-mode-Chevron: black;
-  --ihc-dark-mode-Chevron: white;
   --ihc-pages-margin-top: 64px;
-  --ihc-pages-margin-left: 0.5rem;
   --ihc-JV-bgColor-yellow: rgb(198, 206, 0, 0.7);
   --ihc-JV-orange: orange;
   --ihc-jV-green: green;
