control ropa pedidos cerrados

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,4 +21,6 @@
   --ihc-JV-bgColor-yellow: rgb(198, 206, 0, 0.7);
   --ihc-JV-orange: orange;
   --ihc-jV-green: green;
+  --ihc-red-icons: red;
+  --ihc-disabled-icon: grey;
 }
