landing text shadow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,4 +23,6 @@
   --ihc-jV-green: green;
   --ihc-red-icons: red;
   --ihc-disabled-icon: grey;
+  --ihc-text-shadow-white: 2px 2px 2px #fef6e4;
+  --ihc-text-shadow-dark: 2px 2px 2px #0f0e17;
 }
