--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,4 +25,6 @@
   --ihc-disabled-icon: grey;
   --ihc-text-shadow-white: 2px 2px 2px #fef6e4;
   --ihc-text-shadow-dark: 2px 2px 2px #0f0e17;
+  --ihc-text-thin-shadow-white: 1px 1px 1px #afaead;
+  --ihc-text-thin-shadow-dark: 2px 2px 2px #6c6a6a;
 }
